--- a/app/src/main/res/values-ja/strings.xml
+++ b/app/src/main/res/values-ja/strings.xml
@@ -13,6 +13,8 @@
     <string name="URL_AddPlace">http://mail.tym-bit.com/php_b/AddPlace.php</string>
     <string name="URL_AddComment">http://mail.tym-bit.com/php_b/AddComment.php</string>
     <string name="URL_UserRegist">http://mail.tym-bit.com/php_b/UserRegistration.php</string>
+    <string name="URL_EmailUpdate">http://mail.tym-bit.com/php_b/UpdateEmail.php</string>
+    <string name="URL_PasswordUpdate">http://mail.tym-bit.com/php_b/UpdatePassword.php</string>
 
     <!-- Version -->
     <string name="action_version">バージョン情報</string>
@@ -35,6 +37,7 @@
     <string name="Button_Registration">ユーザ登録</string>
     <string name="caption_mailaddress">メールアドレス</string>
     <string name="caption_password">パスワード</string>
+    <string name="ToastMessage_UserRegistration">ユーザ登録が完了しました</string>
 
     <!-- DisplayDetailActivity, AddPlaceActivity -->
     <string name="title_activity_add_place">AddPlaceActivity</string>
@@ -69,7 +72,5 @@
     <string name="SettingPasswordLbl_OldPassword">現在のパスワード</string>
     <string name="SettingPasswordLbl_NewPassword">新しいパスワード</string>
     <string name="SettingPasswordBtn_PasswordUpdate">更新</string>
-
-
 
 </resources>
