--- a/app/src/main/res/values-ja/strings.xml
+++ b/app/src/main/res/values-ja/strings.xml
@@ -24,6 +24,7 @@
     <string name="MenuBtn_Map">情報表示(地図)</string>
     <string name="MenuBtn_Ranking">各種ランキング</string>
     <string name="MenuBtn_Setting">設定</string>
+    <string name="MenuBtn_TravelDictionary">トラベル辞書</string>
 
     <!-- MapActivity -->
     <string name="title_activity_map_test">MapTestActivity</string>
@@ -72,5 +73,14 @@
     <string name="SettingPasswordLbl_OldPassword">現在のパスワード</string>
     <string name="SettingPasswordLbl_NewPassword">新しいパスワード</string>
     <string name="SettingPasswordBtn_PasswordUpdate">更新</string>
+
+    <!-- AddTravelWordActivity -->
+    <string name="TravelWordAddLlb_Title">トラベル単語を登録します</string>
+    <string name="TravelWordAddLlb_Cutline">説明文</string>
+    <string name="TravelWordAddBtn_Submit">登録</string>
+    <string-array name="TravelWordSpr_Category">
+        <item>お土産品</item>
+        <item>観光地</item>
+    </string-array>
 
 </resources>
