--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,6 +15,8 @@
     <string name="URL_UserRegist">http://mail.tym-bit.com/php_b/UserRegistration.php</string>
     <string name="URL_EmailUpdate">http://mail.tym-bit.com/php_b/UpdateEmail.php</string>
     <string name="URL_PasswordUpdate">http://mail.tym-bit.com/php_b/UpdatePassword.php</string>
+    <!--<string name="URL_TravelWordAdd">http://mail.tym-bit.com/php_b/AddTravel.php</string>-->
+    <string name="URL_TravelWordAdd">http://172.16.42.5:8888/php_b/AddTravel.php</string>
 
     <!-- Version -->
     <string name="action_version">About</string>
