--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,6 +15,7 @@
     <string name="URL_UserRegist">http://mail.tym-bit.com/php_b/UserRegistration.php</string>
     <string name="URL_EmailUpdate">http://mail.tym-bit.com/php_b/UpdateEmail.php</string>
     <string name="URL_PasswordUpdate">http://mail.tym-bit.com/php_b/UpdatePassword.php</string>
+    <string name="URL_UPLOAD">http://mail.tym-bit.com/php_b/upload.php</string>
 
     <!-- Version -->
     <string name="action_version">About</string>
@@ -24,6 +25,7 @@
     <string name="MenuBtn_Map">Display Map</string>
     <string name="MenuBtn_Ranking">Ranking</string>
     <string name="MenuBtn_Setting">Setting</string>
+    <string name="MenuBtn_TravelDictionary">Travel Dictionary</string>
 
     <!-- MapActivity -->
     <string name="title_activity_map_test">MapTestActivity</string>
@@ -73,8 +75,19 @@
     <string name="SettingPasswordLbl_NewPassword">New Password</string>
     <string name="SettingPasswordBtn_PasswordUpdate">Update</string>
 
+    <!-- AddTravelWordActivity -->
+    <string name="TravelWordAddLlb_Title">Register the Travel Word.</string>
+    <string name="TravelWordAddLlb_Cutline">Cutline</string>
+    <string name="TravelWordAddBtn_Gallery">Gallery</string>
+    <string name="TravelWordAddBtn_Submit">Submit</string>
+    <string-array name="TravelWordSpr_Category">
+        <item>Gift</item>
+        <item>Leisure venue</item>
+    </string-array>
+
     <string name="title_activity_select_ranking">SelectRankingActivity</string>
     <string name="title_activity_user_information_update">UserInformationUpdateActivity</string>
     <string name="title_activity_user_email_update">UserEmailUpdateActivity</string>
     <string name="title_activity_user_password_update">UserPasswordUpdateActivity</string>
+    <string name="title_activity_add_travel_word">AddTravelWordActivity</string>
 </resources>
