--- a/app/src/main/res/values-ja/strings.xml
+++ b/app/src/main/res/values-ja/strings.xml
@@ -15,7 +15,11 @@
     <string name="URL_UserRegist">http://mail.tym-bit.com/php_b/UserRegistration.php</string>
     <string name="URL_EmailUpdate">http://mail.tym-bit.com/php_b/UpdateEmail.php</string>
     <string name="URL_PasswordUpdate">http://mail.tym-bit.com/php_b/UpdatePassword.php</string>
-    <string name="URL_UPLOAD">http://mail.tym-bit.com/php_b/upload.php</string>
+    <!--<string name="URL_AddTravelWord">http://mail.tym-bit.com/php_b/wpjn_AddTravelWord.php</string>-->
+    <!--<string name="URL_SearchRanking">http://mail.tym-bit.com/php_b/wpjn_SearchRanking.php</string>-->
+    <!-- TODO トラベル単語の登録とランキングの取得のURLはファイル名を変更しているのでデータベースに接続する際にはチェックが必要です -->
+    <string name="URL_AddTravelWord">http://172.16.42.5:8888/php_b/upload.php</string>
+    <string name="URL_SearchRanking">http://172.16.42.5:8888/php_b/Ranking.php</string>
 
     <!-- Version -->
     <string name="action_version">バージョン情報</string>
@@ -89,4 +93,5 @@
     <string name="SearchTag_RankingLike">RankingLike_ja</string>
     <string name="SearchTag_RankingComment">RankingComment_ja</string>
     <string name="SearchTag_RankingDate">RankingDate_ja</string>
+    <string name="RankingTitle">Ranking Top 9</string>
 </resources>
