--- a/app/src/main/res/values-ja/strings.xml
+++ b/app/src/main/res/values-ja/strings.xml
@@ -8,13 +8,13 @@
     <string name="ProjectCode">JPN00</string>
 
     <!-- Server URLs --><!--★★mail.tym-bit.com-->
-    <string name="URL_SearchPlace">http://mail.tym-bit.com/php_b/SearchPlace.php</string>
-    <string name="URL_SearchComment">http://mail.tym-bit.com/php_b/SearchComment.php</string>
-    <string name="URL_AddPlace">http://mail.tym-bit.com/php_b/AddPlace.php</string>
-    <string name="URL_AddComment">http://mail.tym-bit.com/php_b/AddComment.php</string>
+    <!--<string name="URL_SearchPlace">http://mail.tym-bit.com/php_b/SearchPlace.php</string>-->
+    <!--<string name="URL_SearchComment">http://mail.tym-bit.com/php_b/SearchComment.php</string>-->
+    <!--<string name="URL_AddPlace">http://mail.tym-bit.com/php_b/AddPlace.php</string>-->
+    <!--<string name="URL_AddComment">http://mail.tym-bit.com/php_b/AddComment.php</string>-->
     <!--<string name="URL_UserRegist">http://mail.tym-bit.com/php_b/UserRegistration.php</string>-->
-    <string name="URL_EmailUpdate">http://mail.tym-bit.com/php_b/UpdateEmail.php</string>
-    <string name="URL_PasswordUpdate">http://mail.tym-bit.com/php_b/UpdatePassword.php</string>
+    <!--<string name="URL_EmailUpdate">http://mail.tym-bit.com/php_b/UpdateEmail.php</string>-->
+    <!--<string name="URL_PasswordUpdate">http://mail.tym-bit.com/php_b/UpdatePassword.php</string>-->
     <!--<string name="URL_AddTravelWord">http://mail.tym-bit.com/php_b/wpjn_AddTravelWord.php</string>-->
     <!--<string name="URL_SearchRanking">http://mail.tym-bit.com/php_b/wpjn_SearchRanking.php</string>-->
     <!-- TODO トラベル単語の登録とランキングの取得のURLはファイル名を変更しているのでデータベースに接続する際にはチェックが必要です -->
@@ -22,6 +22,12 @@
     <string name="URL_AddTravelWord">http://172.16.42.5:8888/php_b/upload.php</string>
     <string name="URL_SearchRanking">http://172.16.42.5:8888/php_b/Ranking.php</string>
     <string name="URL_AddRating">http://172.16.42.5:8888/php_b/wpjn_AddRating.php</string>
+    <string name="URL_SearchPlace">http://172.16.42.5:8888/php_b/SearchPlace.php</string>
+    <string name="URL_SearchComment">http://172.16.42.5:8888/php_b/SearchComment.php</string>
+    <string name="URL_AddPlace">http://172.16.42.5:8888/php_b/AddPlace.php</string>
+    <string name="URL_AddComment">http://172.16.42.5:8888/php_b/AddComment.php</string>
+    <string name="URL_EmailUpdate">http://172.16.42.5:8888/php_b/UpdateEmail.php</string>
+    <string name="URL_PasswordUpdate">http://172.16.42.5:8888/php_b/UpdatePassword.php</string>
 
     <!-- Version -->
     <string name="action_version">バージョン情報</string>
