--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,9 +18,9 @@
     <!--<string name="URL_AddTravelWord">http://mail.tym-bit.com/php_b/wpjn_AddTravelWord.php</string>-->
     <!--<string name="URL_SearchRanking">http://mail.tym-bit.com/php_b/wpjn_SearchRanking.php</string>-->
     <!-- TODO トラベル単語の登録とランキングの取得のURLはファイル名を変更しているのでデータベースに接続する際にはチェックが必要です -->
+    <string name="URL_SearchRanking">http://172.16.42.5:8888/php_b/wpjn_SearchRanking.php</string>
     <string name="URL_UserRegist">http://172.16.42.5:8888/php_b/UserRegistration.php</string>
-    <string name="URL_AddTravelWord">http://172.16.42.5:8888/php_b/upload.php</string>
-    <string name="URL_SearchRanking">http://172.16.42.5:8888/php_b/Ranking.php</string>
+    <string name="URL_AddTravelWord">http://172.16.42.5:8888/php_b/wpjn_AddTravelWord.php</string>
     <string name="URL_AddRating">http://172.16.42.5:8888/php_b/wpjn_AddRating.php</string>
     <string name="URL_SearchPlace">http://172.16.42.5:8888/php_b/SearchPlace.php</string>
     <string name="URL_SearchComment">http://172.16.42.5:8888/php_b/SearchComment.php</string>
@@ -111,6 +111,5 @@
     <string name="title_activity_add_travel_word">AddTravelWordActivity</string>
     <string name="title_activity_ranking">RankingActivity</string>
     <string name="action_settings">Settings</string>
-    <string name="title_activity_main2">Main2Activity</string>
     <string name="title_activity_rating">RatingActivity</string>
 </resources>
